Added design system and numbered title classes

--- a/index.css
+++ b/index.css
@@ -144,13 +144,13 @@ select {
 	background-color: hsl(var(--clr-white));
 }
 
-.text--dark {
+.text-dark {
 	color: hsl(var(--clr-dark));
 }
-.text--accent {
+.text-accent {
 	color: hsl(var(--clr-light));
 }
-.text--white {
+.text-white {
 	color: hsl(var(--clr-white));
 }
 
@@ -209,4 +209,17 @@ select {
 .fs-700,
 .fs-600 {
 	line-height: 1.1;
+}
+
+.numbered-title {
+	font-family: var(--ff-sans-cond);
+	font-size: var(--fs-500);
+	text-transform: uppercase;
+	letter-spacing: 4.72px;
+}
+
+.numbered-title span {
+	margin-right: 0.5em;
+	font-weight: 700;
+	color: hsl(var(--clr-white) / 0.25);
 }
