--- a/index.css
+++ b/index.css
@@ -10,12 +10,12 @@
 
 	/*font-sizes*/
 	/* 400 base size (size of paragraph text) */
-	--fs-900: 9.375rem;
-	--fs-800: 6.25rem;
-	--fs-700: 3.5rem;
-	--fs-600: 2rem;
+	--fs-900: clamp(5rem, 8vw + 1rem, 9.375rem);
+	--fs-800: 3.5rem;
+	--fs-700: 1.5rem;
+	--fs-600: 1rem;
 	--fs-500: 1.75rem;
-	--fs-400: 1.125rem;
+	--fs-400: 0.9375rem;
 	--fs-300: 1rem;
 	--fs-200: 0.875rem;
 
@@ -23,6 +23,23 @@
 	--ff-serif: 'Bellefair', serif;
 	--ff-sans-cond: 'Barlow Condensed', sans-serif;
 	--ff-sans-normal: 'Barlow', sans-serif;
+}
+@media (min-width: 35em) {
+	:root {
+		--fs-800: 5rem;
+		--fs-700: 2.5rem;
+		--fs-600: 1.5rem;
+		--fs-400: 1rem;
+	}
+}
+
+@media (min-width: 45em) {
+	:root {
+		--fs-800: 6.25rem;
+		--fs-700: 3.5rem;
+		--fs-600: 2rem;
+		--fs-400: 1.125rem;
+	}
 }
 /* --------------------- */
 /* Reset                 */
@@ -66,6 +83,8 @@ body {
 	background-color: hsl(var(--clr-dark));
 	line-height: 1.5;
 	min-height: 100vh;
+	display: grid;
+	grid-template-rows: min-content 1fr;
 }
 
 /* make images easier to work with */
@@ -112,6 +131,10 @@ select {
 	gap: var(--gap, 1rem);
 }
 
+.d-block {
+	display: block;
+}
+
 .flow > *:where(:not(:first-child)) {
 	/* idea comes from the lobotomized owl technique .flow > * + * */
 	margin-top: var(--flow-space, 1rem);
@@ -121,6 +144,41 @@ select {
 	padding-inline: 2em;
 	margin-inline: auto;
 	max-width: 80rem;
+}
+
+.grid-container {
+	text-align: center;
+	display: grid;
+	place-items: center;
+	padding-inline: 1rem;
+}
+
+.grid-container * {
+	max-width: 50ch;
+}
+
+@media (min-width: 45em) {
+	/*desktop/tablet*/
+	.grid-container {
+		text-align: left;
+		column-gap: var(--container-gap, 2rem);
+		grid-template-columns: minmax(2rem, 1fr) repeat(2, minmax(0, 40em)) minmax(
+				2rem,
+				1fr
+			);
+	}
+	.grid-container > *:first-child {
+		grid-column: 2;
+	}
+
+	.grid-container > *:last-child {
+		grid-column: 3;
+	}
+
+	.grid-container--home {
+		padding-bottom: max(6rem, 20vh);
+		align-items: end;
+	}
 }
 
 .sr-only {
@@ -234,8 +292,9 @@ select {
 /* --------------------- */
 
 .large-button {
+	font-size: 2rem;
 	position: relative;
-	display: grid;
+	display: inline-grid;
 	z-index: 1;
 	place-items: center;
 	padding: 0 2em;
@@ -325,7 +384,6 @@ select {
 	border-radius: 50%;
 	padding: 0 1em;
 	aspect-ratio: 1;
-	width: 2.5em;
 }
 
 .number-indicators > *:hover,
@@ -336,4 +394,32 @@ select {
 .number-indicators > [aria-selected='true'] {
 	background-color: hsl(var(--clr-white) / 1);
 	color: hsl(var(--clr-dark));
+}
+
+/* ------------------------- */
+/* Page specific background  */
+/* ------------------------- */
+
+body {
+	background-size: cover;
+	background-position: bottom center;
+}
+
+/* home */
+
+.home {
+	background-image: url(./assets/home/background-home-mobile.jpg);
+}
+
+@media (min-width: 35rem) {
+	.home {
+		background-position: center center;
+		background-image: url(./assets/home/background-home-tablet.jpg);
+	}
+}
+
+@media (min-width: 45rem) {
+	.home {
+		background-image: url(./assets/home/background-home-desktop.jpg);
+	}
 }
