--- a/index.css
+++ b/index.css
@@ -85,6 +85,7 @@ body {
 	min-height: 100vh;
 	display: grid;
 	grid-template-rows: min-content 1fr;
+	overflow-x: hidden;
 }
 
 /* make images easier to work with */
@@ -321,12 +322,24 @@ select {
 	transform: scale(1.5);
 }
 
+/* primary-header */
+
+.logo {
+	margin: 1.5rem clamp(1.5rem, 5vw, 3.5rem);
+}
+
+.primary-header {
+	justify-content: space-between;
+	align-items: center;
+}
+
 .primary-navigation {
-	--gap: 8rem;
 	--underline-gap: 2rem;
+	inset: 0 0 0 20%;
 	list-style: none;
 	padding: 0;
 	margin: 0;
+	background: hsl(var(--clr-dark) / 0.95);
 }
 
 .primary-navigation a {
@@ -336,6 +349,66 @@ select {
 .primary-navigation a > span {
 	font-weight: 700;
 	margin-right: 0.5em;
+}
+
+.mobile-nav-toggle {
+	display: none;
+}
+
+@media (max-width: 35rem) {
+	.primary-navigation {
+		--underline-gap: 0.5rem;
+		position: fixed;
+		z-index: 1000;
+		inset: 0 0 0 30%;
+		list-style: none;
+		padding: min(20rem, 15vh) 2rem;
+		margin: 0;
+		flex-direction: column;
+		transform: translateX(100%);
+		transition: transform 0.25s ease-in-out;
+	}
+
+	.primary-navigation[data-visible='true'] {
+		transform: translateX(0);
+	}
+
+	.primary-navigation.underline-indicators > .active {
+		border: 0;
+	}
+
+	.mobile-nav-toggle {
+		display: block;
+		position: absolute;
+		z-index: 2000;
+		right: 1rem;
+		top: 2rem;
+		background: transparent;
+		background-image: url(./assets/shared/icon-hamburger.svg);
+		background-repeat: no-repeat;
+		background-position: center;
+		width: 1.5rem;
+		aspect-ratio: 1;
+		border: 0;
+	}
+
+	.mobile-nav-toggle[aria-expanded='true'] {
+		background-image: url(./assets/shared/icon-close.svg);
+	}
+
+	.mobile-nav-toggle:focus-visible {
+		outline: 5px solid white;
+		outline-offset: 5px;
+	}
+}
+
+@media (min-width: 35em) and (max-width: 45em) {
+}
+@supports (backdrop-filter: blur(1rem)) {
+	.primary-navigation {
+		background: hsl(var(--clr-white) / 0.05);
+		backdrop-filter: blur(1rem);
+	}
 }
 
 .underline-indicators > * {
