--- a/index.css
+++ b/index.css
@@ -196,6 +196,21 @@ select {
 	border: 0;
 }
 
+.skip-to-content {
+	position: absolute;
+	z-index: 9999;
+	background-color: hsl(var(--clr-white));
+	color: hsl(var(--clr-dark));
+	padding: 0.5em 1em;
+	margin-inline: auto;
+	transform: translateY(-100%);
+	transition: translateY 250ms ease-in;
+}
+
+.skip-to-content:focus {
+	transform: translateY(0);
+}
+
 /* colors */
 
 .bg-dark {
@@ -334,6 +349,7 @@ select {
 }
 
 .primary-navigation {
+	--gap: clamp(1.5rem, 5vw, 3.5rem);
 	--underline-gap: 2rem;
 	inset: 0 0 0 20%;
 	list-style: none;
@@ -402,8 +418,42 @@ select {
 	}
 }
 
-@media (min-width: 35em) and (max-width: 45em) {
+@media (min-width: 35em) {
+	.primary-navigation {
+		padding-inline: clamp(3rem, 7vw, 7rem);
+	}
 }
+@media (min-width: 35em) and (max-width: 44.999em) {
+	.primary-navigation {
+		padding-inline: 3rem;
+	}
+
+	.primary-navigation a > span {
+		display: none;
+	}
+}
+
+@media (min-width: 45em) {
+	.primary-header::after {
+		content: '';
+		display: block;
+		position: relative;
+		height: 1px;
+		width: 100%;
+		margin-right: -2.5rem;
+		background: hsl(var(--clr-white) / 0.25);
+		order: 1;
+	}
+
+	nav {
+		order: 2;
+	}
+
+	.primary-navigation {
+		margin-block: 2rem;
+	}
+}
+
 @supports (backdrop-filter: blur(1rem)) {
 	.primary-navigation {
 		background: hsl(var(--clr-white) / 0.05);
