--- a/index.css
+++ b/index.css
@@ -143,6 +143,10 @@ select {
 	margin-top: var(--flow-space, 1rem);
 }
 
+.flow--space-small {
+	--flow-space: 0.75rem;
+}
+
 .container {
 	padding-inline: 2em;
 	margin-inline: auto;
@@ -430,9 +434,10 @@ select {
 
 .underline-indicators > * {
 	cursor: pointer;
-	padding: var(--underline-gap, 1rem) 0;
+	padding: var(--underline-gap, 0.5rem) 0;
 	border: 0;
 	border-bottom: 0.2rem solid hsl(var(--clr-light) / 0);
+	background-color: transparent;
 }
 
 .underline-indicators > *:hover,
@@ -514,6 +519,44 @@ body {
 	}
 }
 
+/* destination */
+
+.destination {
+	background-image: url(./assets/destination/background-destination-mobile.jpg);
+}
+
+@media (min-width: 35rem) {
+	.destination {
+		background-position: center center;
+		background-image: url(./assets/destination/background-destination-tablet.jpg);
+	}
+}
+
+@media (min-width: 45rem) {
+	.destination {
+		background-image: url(./assets/destination/background-destination-desktop.jpg);
+	}
+}
+
+/* crew */
+
+.crew {
+	background-image: url(./assets/crew/background-crew-mobile.jpg);
+}
+
+@media (min-width: 35rem) {
+	.crew {
+		background-position: center center;
+		background-image: url(./assets/crew/background-crew-tablet.jpg);
+	}
+}
+
+@media (min-width: 45rem) {
+	.crew {
+		background-image: url(./assets/crew/background-crew-desktop.jpg);
+	}
+}
+
 /* ------------------------- */
 /* Layout                    */
 /* ------------------------- */
@@ -545,7 +588,7 @@ body {
 		'content';
 }
 
-.grid-container--destination > img {
+.grid-container--destination > picture {
 	grid-area: image;
 	max-width: 60%;
 }
@@ -569,6 +612,35 @@ body {
 	font-size: 1.75rem;
 }
 
+/* crew */
+
+.grid-container--crew {
+	--flow-space: 2rem;
+	grid-template-areas:
+		'title'
+		'image'
+		'tabs'
+		'content';
+}
+
+.grid-container--crew > picture {
+	grid-area: image;
+	max-width: 60%;
+	border-bottom: 1px solid hsl(var(--clr-white) / 0.1);
+}
+
+.grid-container--crew > .dot-indicators {
+	grid-area: tabs;
+}
+
+.grid-container--crew > .crew-details {
+	grid-area: content;
+}
+
+.crew-details h2 {
+	color: hsl(var(--clr-white) / 0.5);
+}
+
 @media (min-width: 35em) {
 	.numbered-title {
 		justify-self: start;
@@ -578,6 +650,15 @@ body {
 	.destination-meta {
 		flex-direction: row;
 		justify-content: space-evenly;
+	}
+
+	.grid-container--crew {
+		padding-bottom: 0;
+		grid-template-areas:
+			'title'
+			'content'
+			'tabs'
+			'image';
 	}
 }
 
@@ -614,7 +695,8 @@ body {
 			'. image content .';
 	}
 
-	.grid-container--destination > img {
+	.grid-container--destination > picture,
+	.grid-container--crew > picture {
 		max-width: 90%;
 	}
 
@@ -622,4 +704,19 @@ body {
 		--gap: min(6vw, 6rem);
 		justify-content: start;
 	}
+
+	.grid-container--crew {
+		grid-template-areas:
+			'. title title .'
+			'. content image .'
+			'. tabs image .';
+	}
+
+	.grid-container--crew > .dot-indicators {
+		justify-self: start;
+	}
+
+	/* .grid-container--crew > picture {
+		align-self: end;
+	} */
 }
