Updated sass directory with css code

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -2,6 +2,8 @@
 
 @forward 'base/_base-dir';
 
+@forward 'utilities/_utilities-dir';
+
 @forward 'components/_components-dir';
 
 @forward 'layouts/_layouts-dir';
