--- a/scss/components/_primary-header.scss
+++ b/scss/components/_primary-header.scss
@@ -62,7 +62,7 @@
 		right: 1rem;
 		top: 2rem;
 		background: transparent;
-		background-image: url(../../assets/shared/icon-hamburger.svg);
+		background-image: url(../assets/shared/icon-hamburger.svg);
 		background-repeat: no-repeat;
 		background-position: center;
 		width: 1.5rem;
@@ -71,7 +71,7 @@
 	}
 
 	.mobile-nav-toggle[aria-expanded='true'] {
-		background-image: url(../../assets/shared/icon-close.svg);
+		background-image: url(../assets/shared/icon-close.svg);
 	}
 
 	.mobile-nav-toggle:focus-visible {
